working on entities. Not done.

--- a/bin/Immersion/assets/game/lang/en.json
+++ b/bin/Immersion/assets/game/lang/en.json
@@ -1,12 +1,12 @@
 {
 
-  "tabname-immersionblocks": "Immersion Blocks",
-  "tabname-immersiondeco": "Immersion Decor",
-  "tabname-immersionfauna": "Immersion Fauna",
-  "tabname-immersionflora": "Immersion Flora",
-  "tabname-immersionitems": "Immersion Items",
-  "tabname-immersiontools": "Immersion Tools",
-  "tabname-immersionweapons": "Immersion Weapons",
+  "tabname-immersionblocks": "I Blocks",
+  "tabname-immersiondeco": "I Decor",
+  "tabname-immersionfauna": "I Fauna",
+  "tabname-immersionflora": "I Flora",
+  "tabname-immersionitems": "I Items",
+  "tabname-immersiontools": "I Tools",
+  "tabname-immersionweapons": "I Weapons",
   "tabname-special": "Special",
   
   "handbook-collectible-sources": "Sources",  
