Did a generucal fix for the missing language files. may need latter tweak.

--- a/bin/Immersion/assets/game/lang/en.json
+++ b/bin/Immersion/assets/game/lang/en.json
@@ -4233,6 +4233,186 @@
 	"blockdesc-sword-*": "Break to pick it up",	
 	
 	"item-sail": "Sail",
+	
+	
+	
+		"block-toolmold-blue-raw-lamellae": "Toolmold Blue Raw (Lamellae)",
+	"block-toolmold-brown-raw-lamellae": "Toolmold Brown Raw (Lamellae)",
+	"block-toolmold-fire-raw-lamellae": "Toolmold Fire Raw (Lamellae)",
+	"block-toolmold-red-raw-lamellae": "Toolmold Red Raw (Lamellae)",
+	"block-toolmold-blue-burned-lamellae": "Toolmold Blue Burned (Lamellae)",
+	"block-toolmold-brown-burned-lamellae": "Toolmold Brown Burned (Lamellae)",
+	"block-toolmold-fire-burned-lamellae": "Toolmold Fire Burned (Lamellae)",
+	"block-toolmold-red-burned-lamellae": "Toolmold Red Burned (Lamellae)",
+	"block-looseores-sylvite-andesite": "Looseores Sylvite (Andesite)",
+	"block-looseores-olivine-andesite": "Looseores Olivine (Andesite)",
+	"block-looseores-sylvite-chalk": "Looseores Sylvite (Chalk)",
+	"block-looseores-olivine-chalk": "Looseores Olivine (Chalk)",
+	"block-looseores-sylvite-chert": "Looseores Sylvite (Chert)",
+	"block-looseores-olivine-chert": "Looseores Olivine (Chert)",
+	"block-looseores-sylvite-conglomerate": "Looseores Sylvite (Conglomerate)",
+	"block-looseores-olivine-conglomerate": "Looseores Olivine (Conglomerate)",
+	"block-looseores-sylvite-limestone": "Looseores Sylvite (Limestone)",
+	"block-looseores-olivine-limestone": "Looseores Olivine (Limestone)",
+	"block-looseores-sylvite-claystone": "Looseores Sylvite (Claystone)",
+	"block-looseores-olivine-claystone": "Looseores Olivine (Claystone)",
+	"block-looseores-sylvite-granite": "Looseores Sylvite (Granite)",
+	"block-looseores-olivine-granite": "Looseores Olivine (Granite)",
+	"block-looseores-sylvite-sandstone": "Looseores Sylvite (Sandstone)",
+	"block-looseores-olivine-sandstone": "Looseores Olivine (Sandstone)",
+	"block-looseores-sylvite-shale": "Looseores Sylvite (Shale)",
+	"block-looseores-olivine-shale": "Looseores Olivine (Shale)",
+	"block-looseores-sylvite-basalt": "Looseores Sylvite (Basalt)",
+	"block-looseores-olivine-basalt": "Looseores Olivine (Basalt)",
+	"block-looseores-sylvite-peridotite": "Looseores Sylvite (Peridotite)",
+	"block-looseores-sylvite-phyllite": "Looseores Sylvite (Phyllite)",
+	"block-looseores-olivine-phyllite": "Looseores Olivine (Phyllite)",
+	"block-looseores-sylvite-slate": "Looseores Sylvite (Slate)",
+	"block-looseores-olivine-slate": "Looseores Olivine (Slate)",
+	"block-looseores-sylvite-obsidian": "Looseores Sylvite (Obsidian)",
+	"block-looseores-olivine-obsidian": "Looseores Olivine (Obsidian)",
+	"block-looseores-sylvite-kimberlite": "Looseores Sylvite (Kimberlite)",
+	"block-looseores-olivine-kimberlite": "Looseores Olivine (Kimberlite)",
+	"block-looseores-sylvite-scoria": "Looseores Sylvite (Scoria)",
+	"block-looseores-olivine-scoria": "Looseores Olivine (Scoria)",
+	"block-looseores-sylvite-tuff": "Looseores Sylvite (Tuff)",
+	"block-looseores-olivine-tuff": "Looseores Olivine (Tuff)",
+	"block-looseores-sylvite-bauxite": "Looseores Sylvite (Bauxite)",
+	"block-looseores-olivine-bauxite": "Looseores Olivine (Bauxite)",
+	"block-looseores-olivine-halite": "Looseores Olivine (Halite)",
+	"block-looseores-sylvite-suevite": "Looseores Sylvite (Suevite)",
+	"block-looseores-olivine-suevite": "Looseores Olivine (Suevite)",
+	"block-looseores-sylvite-whitemarble": "Looseores Sylvite (Whitemarble)",
+	"block-looseores-olivine-whitemarble": "Looseores Olivine (Whitemarble)",
+	"block-looseores-sylvite-redmarble": "Looseores Sylvite (Redmarble)",
+	"block-looseores-olivine-redmarble": "Looseores Olivine (Redmarble)",
+	"block-looseores-sylvite-greenmarble": "Looseores Sylvite (Greenmarble)",
+	"block-looseores-olivine-greenmarble": "Looseores Olivine (Greenmarble)",
+	"block-glasslantern-copper-plain": "Glasslantern Copper (Plain)",
+	"block-glasslantern-brass-plain": "Glasslantern Brass (Plain)",
+	"block-glasslantern-blackbronze-plain": "Glasslantern Blackbronze (Plain)",
+	"block-glasslantern-bismuth-plain": "Glasslantern Bismuth (Plain)",
+	"block-glasslantern-tinbronze-plain": "Glasslantern Tinbronze (Plain)",
+	"block-glasslantern-bismuthbronze-plain": "Glasslantern Bismuthbronze (Plain)",
+	"block-glasslantern-molybdochalkos-plain": "Glasslantern Molybdochalkos (Plain)",
+	"block-glasslantern-silver-plain": "Glasslantern Silver (Plain)",
+	"block-glasslantern-gold-plain": "Glasslantern Gold (Plain)",
+	"block-glasslantern-copper-gold": "Glasslantern Copper (Gold)",
+	"block-glasslantern-brass-gold": "Glasslantern Brass (Gold)",
+	"block-glasslantern-blackbronze-gold": "Glasslantern Blackbronze (Gold)",
+	"block-glasslantern-bismuth-gold": "Glasslantern Bismuth (Gold)",
+	"block-glasslantern-tinbronze-gold": "Glasslantern Tinbronze (Gold)",
+	"block-glasslantern-bismuthbronze-gold": "Glasslantern Bismuthbronze (Gold)",
+	"block-glasslantern-molybdochalkos-gold": "Glasslantern Molybdochalkos (Gold)",
+	"block-glasslantern-silver-gold": "Glasslantern Silver (Gold)",
+	"block-glasslantern-gold-gold": "Glasslantern Gold (Gold)",
+	"block-glasslantern-copper-silver": "Glasslantern Copper (Silver)",
+	"block-glasslantern-brass-silver": "Glasslantern Brass (Silver)",
+	"block-glasslantern-blackbronze-silver": "Glasslantern Blackbronze (Silver)",
+	"block-glasslantern-bismuth-silver": "Glasslantern Bismuth (Silver)",
+	"block-glasslantern-tinbronze-silver": "Glasslantern Tinbronze (Silver)",
+	"block-glasslantern-bismuthbronze-silver": "Glasslantern Bismuthbronze (Silver)",
+	"block-glasslantern-molybdochalkos-silver": "Glasslantern Molybdochalkos (Silver)",
+	"block-glasslantern-silver-silver": "Glasslantern Silver (Silver)",
+	"block-glasslantern-gold-silver": "Glasslantern Gold (Silver)",
+	"block-locust-cage": "Locust (Cage)",
+	"block-slab-branch-cordage-granite-birch-debarked-leatherstrips": "Slab Branch Cordage Granite Birch Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-andesite-birch-debarked-leatherstrips": "Slab Branch Cordage Andesite Birch Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-basalt-birch-debarked-leatherstrips": "Slab Branch Cordage Basalt Birch Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-peridotite-birch-debarked-leatherstrips": "Slab Branch Cordage Peridotite Birch Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-granite-oak-debarked-leatherstrips": "Slab Branch Cordage Granite Oak Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-andesite-oak-debarked-leatherstrips": "Slab Branch Cordage Andesite Oak Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-basalt-oak-debarked-leatherstrips": "Slab Branch Cordage Basalt Oak Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-peridotite-oak-debarked-leatherstrips": "Slab Branch Cordage Peridotite Oak Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-granite-maple-debarked-leatherstrips": "Slab Branch Cordage Granite Maple Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-andesite-maple-debarked-leatherstrips": "Slab Branch Cordage Andesite Maple Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-basalt-maple-debarked-leatherstrips": "Slab Branch Cordage Basalt Maple Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-peridotite-maple-debarked-leatherstrips": "Slab Branch Cordage Peridotite Maple Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-granite-pine-debarked-leatherstrips": "Slab Branch Cordage Granite Pine Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-andesite-pine-debarked-leatherstrips": "Slab Branch Cordage Andesite Pine Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-basalt-pine-debarked-leatherstrips": "Slab Branch Cordage Basalt Pine Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-peridotite-pine-debarked-leatherstrips": "Slab Branch Cordage Peridotite Pine Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-granite-acacia-debarked-leatherstrips": "Slab Branch Cordage Granite Acacia Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-andesite-acacia-debarked-leatherstrips": "Slab Branch Cordage Andesite Acacia Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-basalt-acacia-debarked-leatherstrips": "Slab Branch Cordage Basalt Acacia Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-peridotite-acacia-debarked-leatherstrips": "Slab Branch Cordage Peridotite Acacia Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-granite-kapok-debarked-leatherstrips": "Slab Branch Cordage Granite Kapok Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-andesite-kapok-debarked-leatherstrips": "Slab Branch Cordage Andesite Kapok Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-basalt-kapok-debarked-leatherstrips": "Slab Branch Cordage Basalt Kapok Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-peridotite-kapok-debarked-leatherstrips": "Slab Branch Cordage Peridotite Kapok Debarked (Leatherstrips)",
+	"block-slab-branch-cordage-granite-birch-debarked-sinew": "Slab Branch Cordage Granite Birch Debarked (Sinew)",
+	"block-slab-branch-cordage-andesite-birch-debarked-sinew": "Slab Branch Cordage Andesite Birch Debarked (Sinew)",
+	"block-slab-branch-cordage-basalt-birch-debarked-sinew": "Slab Branch Cordage Basalt Birch Debarked (Sinew)",
+	"block-slab-branch-cordage-peridotite-birch-debarked-sinew": "Slab Branch Cordage Peridotite Birch Debarked (Sinew)",
+	"block-slab-branch-cordage-granite-oak-debarked-sinew": "Slab Branch Cordage Granite Oak Debarked (Sinew)",
+	"block-slab-branch-cordage-andesite-oak-debarked-sinew": "Slab Branch Cordage Andesite Oak Debarked (Sinew)",
+	"block-slab-branch-cordage-basalt-oak-debarked-sinew": "Slab Branch Cordage Basalt Oak Debarked (Sinew)",
+	"block-slab-branch-cordage-peridotite-oak-debarked-sinew": "Slab Branch Cordage Peridotite Oak Debarked (Sinew)",
+	"block-slab-branch-cordage-granite-maple-debarked-sinew": "Slab Branch Cordage Granite Maple Debarked (Sinew)",
+	"block-slab-branch-cordage-andesite-maple-debarked-sinew": "Slab Branch Cordage Andesite Maple Debarked (Sinew)",
+	"block-slab-branch-cordage-basalt-maple-debarked-sinew": "Slab Branch Cordage Basalt Maple Debarked (Sinew)",
+	"block-slab-branch-cordage-peridotite-maple-debarked-sinew": "Slab Branch Cordage Peridotite Maple Debarked (Sinew)",
+	"block-slab-branch-cordage-granite-pine-debarked-sinew": "Slab Branch Cordage Granite Pine Debarked (Sinew)",
+	"block-slab-branch-cordage-andesite-pine-debarked-sinew": "Slab Branch Cordage Andesite Pine Debarked (Sinew)",
+	"block-slab-branch-cordage-basalt-pine-debarked-sinew": "Slab Branch Cordage Basalt Pine Debarked (Sinew)",
+	"block-slab-branch-cordage-peridotite-pine-debarked-sinew": "Slab Branch Cordage Peridotite Pine Debarked (Sinew)",
+	"block-slab-branch-cordage-granite-acacia-debarked-sinew": "Slab Branch Cordage Granite Acacia Debarked (Sinew)",
+	"block-slab-branch-cordage-andesite-acacia-debarked-sinew": "Slab Branch Cordage Andesite Acacia Debarked (Sinew)",
+	"block-slab-branch-cordage-basalt-acacia-debarked-sinew": "Slab Branch Cordage Basalt Acacia Debarked (Sinew)",
+	"block-slab-branch-cordage-peridotite-acacia-debarked-sinew": "Slab Branch Cordage Peridotite Acacia Debarked (Sinew)",
+	"block-slab-branch-cordage-granite-kapok-debarked-sinew": "Slab Branch Cordage Granite Kapok Debarked (Sinew)",
+	"block-slab-branch-cordage-andesite-kapok-debarked-sinew": "Slab Branch Cordage Andesite Kapok Debarked (Sinew)",
+	"block-slab-branch-cordage-basalt-kapok-debarked-sinew": "Slab Branch Cordage Basalt Kapok Debarked (Sinew)",
+	"block-slab-branch-cordage-peridotite-kapok-debarked-sinew": "Slab Branch Cordage Peridotite Kapok Debarked (Sinew)",
+	"block-slab-branch-cordage-granite-birch-debarked-rope": "Slab Branch Cordage Granite Birch Debarked (Rope)",
+	"block-slab-branch-cordage-andesite-birch-debarked-rope": "Slab Branch Cordage Andesite Birch Debarked (Rope)",
+	"block-slab-branch-cordage-basalt-birch-debarked-rope": "Slab Branch Cordage Basalt Birch Debarked (Rope)",
+	"block-slab-branch-cordage-peridotite-birch-debarked-rope": "Slab Branch Cordage Peridotite Birch Debarked (Rope)",
+	"block-slab-branch-cordage-granite-oak-debarked-rope": "Slab Branch Cordage Granite Oak Debarked (Rope)",
+	"block-slab-branch-cordage-andesite-oak-debarked-rope": "Slab Branch Cordage Andesite Oak Debarked (Rope)",
+	"block-slab-branch-cordage-basalt-oak-debarked-rope": "Slab Branch Cordage Basalt Oak Debarked (Rope)",
+	"block-slab-branch-cordage-peridotite-oak-debarked-rope": "Slab Branch Cordage Peridotite Oak Debarked (Rope)",
+	"block-slab-branch-cordage-granite-maple-debarked-rope": "Slab Branch Cordage Granite Maple Debarked (Rope)",
+	"block-slab-branch-cordage-andesite-maple-debarked-rope": "Slab Branch Cordage Andesite Maple Debarked (Rope)",
+	"block-slab-branch-cordage-basalt-maple-debarked-rope": "Slab Branch Cordage Basalt Maple Debarked (Rope)",
+	"block-slab-branch-cordage-peridotite-maple-debarked-rope": "Slab Branch Cordage Peridotite Maple Debarked (Rope)",
+	"block-slab-branch-cordage-granite-pine-debarked-rope": "Slab Branch Cordage Granite Pine Debarked (Rope)",
+	"block-slab-branch-cordage-andesite-pine-debarked-rope": "Slab Branch Cordage Andesite Pine Debarked (Rope)",
+	"block-slab-branch-cordage-basalt-pine-debarked-rope": "Slab Branch Cordage Basalt Pine Debarked (Rope)",
+	"block-slab-branch-cordage-peridotite-pine-debarked-rope": "Slab Branch Cordage Peridotite Pine Debarked (Rope)",
+	"block-slab-branch-cordage-granite-acacia-debarked-rope": "Slab Branch Cordage Granite Acacia Debarked (Rope)",
+	"block-slab-branch-cordage-andesite-acacia-debarked-rope": "Slab Branch Cordage Andesite Acacia Debarked (Rope)",
+	"block-slab-branch-cordage-basalt-acacia-debarked-rope": "Slab Branch Cordage Basalt Acacia Debarked (Rope)",
+	"block-slab-branch-cordage-peridotite-acacia-debarked-rope": "Slab Branch Cordage Peridotite Acacia Debarked (Rope)",
+	"block-slab-branch-cordage-granite-kapok-debarked-rope": "Slab Branch Cordage Granite Kapok Debarked (Rope)",
+	"block-slab-branch-cordage-andesite-kapok-debarked-rope": "Slab Branch Cordage Andesite Kapok Debarked (Rope)",
+	"block-slab-branch-cordage-basalt-kapok-debarked-rope": "Slab Branch Cordage Basalt Kapok Debarked (Rope)",
+	"block-slab-branch-cordage-peridotite-kapok-debarked-rope": "Slab Branch Cordage Peridotite Kapok Debarked (Rope)",
+	"block-slab-branch-granite-birch-debarked": "Slab Branch Granite Birch (Debarked)",
+	"block-slab-branch-andesite-birch-debarked": "Slab Branch Andesite Birch (Debarked)",
+	"block-slab-branch-basalt-birch-debarked": "Slab Branch Basalt Birch (Debarked)",
+	"block-slab-branch-peridotite-birch-debarked": "Slab Branch Peridotite Birch (Debarked)",
+	"block-slab-branch-granite-oak-debarked": "Slab Branch Granite Oak (Debarked)",
+	"block-slab-branch-andesite-oak-debarked": "Slab Branch Andesite Oak (Debarked)",
+	"block-slab-branch-basalt-oak-debarked": "Slab Branch Basalt Oak (Debarked)",
+	"block-slab-branch-peridotite-oak-debarked": "Slab Branch Peridotite Oak (Debarked)",
+	"block-slab-branch-granite-maple-debarked": "Slab Branch Granite Maple (Debarked)",
+	"block-slab-branch-andesite-maple-debarked": "Slab Branch Andesite Maple (Debarked)",
+	"block-slab-branch-basalt-maple-debarked": "Slab Branch Basalt Maple (Debarked)",
+	"block-slab-branch-peridotite-maple-debarked": "Slab Branch Peridotite Maple (Debarked)",
+	"block-slab-branch-granite-pine-debarked": "Slab Branch Granite Pine (Debarked)",
+	"block-slab-branch-andesite-pine-debarked": "Slab Branch Andesite Pine (Debarked)",
+	"block-slab-branch-basalt-pine-debarked": "Slab Branch Basalt Pine (Debarked)",
+	"block-slab-branch-peridotite-pine-debarked": "Slab Branch Peridotite Pine (Debarked)",
+	"block-slab-branch-granite-acacia-debarked": "Slab Branch Granite Acacia (Debarked)",
+	"block-slab-branch-andesite-acacia-debarked": "Slab Branch Andesite Acacia (Debarked)",
+	"block-slab-branch-basalt-acacia-debarked": "Slab Branch Basalt Acacia (Debarked)",
+	"block-slab-branch-peridotite-acacia-debarked": "Slab Branch Peridotite Acacia (Debarked)",
+	"block-slab-branch-granite-kapok-debarked": "Slab Branch Granite Kapok (Debarked)",
+	"block-slab-branch-andesite-kapok-debarked": "Slab Branch Andesite Kapok (Debarked)",
+	"block-slab-branch-basalt-kapok-debarked": "Slab Branch Basalt Kapok (Debarked)",
+	"block-slab-branch-peridotite-kapok-debarked": "Slab Branch Peridotite Kapok (Debarked)",
+	"block-dryingtray-aged": "Dryingtray (Aged)",
 
 	
 }
