Created inworld recipes for pemmican. Working on language files.

--- a/bin/Immersion/assets/game/lang/en.json
+++ b/bin/Immersion/assets/game/lang/en.json
@@ -19,6 +19,78 @@
   "block-bonfire-extinct": "Bonfire (Extinct)" ,
   "block-bonfire-lit": "Bonfire (Lit)" ,
   
+  "block-food-bowl-small-blue-raw": "Food Bowl Small Blue (Raw)",
+  "block-food-bowl-medium-blue-raw": "Food Bowl Medium Blue (Raw)",
+  "block-food-bowl-large-blue-raw": "Food Bowl Large Blue (Raw)",
+  "block-food-bowl-small-brown-raw": "Food Bowl Small Brown (Raw)",
+  "block-food-bowl-medium-brown-raw": "Food Bowl Medium Brown (Raw)",
+  "block-food-bowl-large-brown-raw": "Food Bowl Large Brown (Raw)",
+  "block-food-bowl-small-fire-raw": "Food Bowl Small Fire (Raw)",
+  "block-food-bowl-medium-fire-raw": "Food Bowl Medium Fire (Raw)",
+  "block-food-bowl-large-fire-raw": "Food Bowl Large Fire (Raw)",
+  "block-food-bowl-small-red-raw": "Food Bowl Small Red (Raw)",
+  "block-food-bowl-medium-red-raw": "Food Bowl Medium Red (Raw)",  
+  "block-food-bowl-large-red-raw": "Food Bowl Large Red (Raw)",
+  
+  "block-food-bowl-small-blue-burned": "Food Bowl Small Blue (Burned)",
+  "block-food-bowl-medium-blue-burned": "Food Bowl Medium Blue (Burned)",
+  "block-food-bowl-large-blue-burned": "Food Bowl Large Blue (Burned)",
+  "block-food-bowl-small-brown-burned": "Food Bowl Small Brown (Burned)",
+  "block-food-bowl-medium-brown-burned": "Food Bowl Medium Brown (Burned)",
+  "block-food-bowl-large-brown-burned": "Food Bowl Large Brown (Burned)",
+  "block-food-bowl-small-fire-burned": "Food Bowl Small Fire (Burned)",
+  "block-food-bowl-medium-fire-burned": "Food Bowl Medium Fire (Burned)",
+  "block-food-bowl-large-fire-burned": "Food Bowl Large Fire (Burned)",
+  "block-food-bowl-small-red-burned": "Food Bowl Small Red (Burned)",
+  "block-food-bowl-medium-red-burned": "Food Bowl Medium Red (Burned)",
+  "block-food-bowl-large-red-burned": "Food Bowl Large Red (Burned)",
+  "blockdesc-food-bowl-*-burned": "Use to mix food ingredients, meats and pemmican",  
+  
+  "block-food-bowl-small-blue-raw-meat": "Food Bowl Small Blue (Raw-meat)",
+  "block-food-bowl-medium-blue-raw-meat": "Food Bowl Medium Blue (Raw-meat)",
+  "block-food-bowl-large-blue-raw-meat": "Food Bowl Large Blue (Raw-meat)",
+  "block-food-bowl-small-brown-raw-meat": "Food Bowl Small Brown (Raw-meat)",
+  "block-food-bowl-medium-brown-raw-meat": "Food Bowl Medium Brown (Raw-meat)",
+  "block-food-bowl-large-brown-raw-meat": "Food Bowl Large Brown (Raw-meat)",
+  "block-food-bowl-small-fire-raw-meat": "Food Bowl Small Fire (Raw-meat)",
+  "block-food-bowl-medium-fire-raw-meat": "Food Bowl Medium Fire (Raw-meat)",
+  "block-food-bowl-large-fire-raw-meat": "Food Bowl Large Fire (Raw-meat)",
+  "block-food-bowl-small-red-raw-meat": "Food Bowl Small Red (Raw-meat)",
+  "block-food-bowl-medium-red-raw-meat": "Food Bowl Medium Red (Raw-meat)",
+  "block-food-bowl-large-red-raw-meat": "Food Bowl Large Red (Raw-meat)",
+  "block-food-bowl-large-red-raw-meat": "Food Bowl Large Red (Raw-meat)",
+  "blockdesc-food-bowl-*-raw-meat": "Sneak Right click with Salt to make Salted Meat",
+  
+  "block-food-bowl-small-blue-salted-meat": "Food Bowl Small Blue (Salted-Meat)",
+  "block-food-bowl-medium-blue-salted-meat": "Food Bowl Medium Blue (Salted-Meat)",
+  "block-food-bowl-large-blue-salted-meat": "Food Bowl Large Blue (Salted-Meat)",
+  "block-food-bowl-small-brown-salted-meat": "Food Bowl Small Brown (Salted-Meat)",
+  "block-food-bowl-medium-brown-salted-meat": "Food Bowl Medium Brown (Salted-Meat)",
+  "block-food-bowl-large-brown-salted-meat": "Food Bowl Large Brown (Salted-Meat)",
+  "block-food-bowl-small-fire-salted-meat": "Food Bowl Small Fire (Salted-Meat)",
+  "block-food-bowl-medium-fire-salted-meat": "Food Bowl Medium Fire (Salted-Meat)",
+  "block-food-bowl-large-fire-salted-meat": "Food Bowl Large Fire (Salted-Meat)",
+  "block-food-bowl-small-red-salted-meat": "Food Bowl Small Red (Salted-Meat)",
+  "block-food-bowl-medium-red-salted-meat": "Food Bowl Medium Red (Salted-Meat)",
+  "block-food-bowl-large-red-salted-meat": "Food Bowl Large Red (Salted-Meat)",
+  "blockdesc-food-bowl-*-salted-meat": "Hold Right Click to remove Salted meat",  
+  
+  "blockdesc-food-bowl-*-intestines": "Sneak Right click with a knife to make Sausage Casings",
+  "blockdesc-food-bowl-*-meat-flour": "Sneak Right click with Dry Fruit Flour to mix ingredients for Pemmican",
+  "blockdesc-food-bowl-*-meat-fruit": "Sneak Right click with Fat to mix ingredients for Pemmican",
+  "blockdesc-food-bowl-*-meat-fruit-fat": "Sneak Right click with bowls of honey to finalize Pemmican",
+  
+  "item-flour-dryfruit": "Flour (Dryfruit)",
+  "item-flour-redmeat-dry": "Flour Redmeat (Dry)",
+  "item-redmeat-salted": "Redmeat (Salted)",
+  "item-redmeat-dry": "Redmeat (Dry)",
+  "item-dryfruit-blueberry": "Dryfruit (Blueberry)",
+  "item-dryfruit-cranberry": "Dryfruit (Cranberry)",
+  "item-dryfruit-redcurrant": "Dryfruit (Redcurrant)",
+  "item-dryfruit-whitecurrant": "Dryfruit (Whitecurrant)",
+  "item-dryfruit-blackcurrant": "Dryfruit (Blackcurrant)",
+  "item-dryfruit-saguaro": "Dryfruit (Saguaro)",
+   
   "block-ingotstampmold-blue-raw": "Blue Raw Ingot Stamp Mold",
   "block-ingotstampmold-brown-raw": "Brown Raw Ingot Stamp Mold",
   "block-ingotstampmold-fire-raw": "Fire Raw Ingot Stamp Mold",
