--- a/bin/Immersion/assets/immersion/lang/en.json
+++ b/bin/Immersion/assets/immersion/lang/en.json
@@ -10,6 +10,122 @@
   "Place a Barked Very Thin Branch horizontally , shift right click with any cordage, then shift right click again with 3 more Barked Very Thin Branches.":"Place a Barked Very Thin Branch horizontally , shift right click with any cordage, then shift right click again with 3 more Barked Very Thin Branches.",
   "Place a Debarked Very Thin Branch vertically on the ground, shift right click with any cordage, next shift right click again with Debarked Very Thin Branch to make the scafolding.":"Place a Debarked Very Thin Branch vertically on the ground, shift right click with any cordage, next shift right click again with Debarked Very Thin Branch to make the scafolding.",
   
+  	
+	"block-drying-rack-birch-leatherstrips-rope-ns": "Drying Rack Birch Leatherstrips Rope (Ns)",
+	"block-drying-rack-oak-leatherstrips-rope-ns": "Drying Rack Oak Leatherstrips Rope (Ns)",
+	"block-drying-rack-maple-leatherstrips-rope-ns": "Drying Rack Maple Leatherstrips Rope (Ns)",
+	"block-drying-rack-pine-leatherstrips-rope-ns": "Drying Rack Pine Leatherstrips Rope (Ns)",
+	"block-drying-rack-acacia-leatherstrips-rope-ns": "Drying Rack Acacia Leatherstrips Rope (Ns)",
+	"block-drying-rack-kapok-leatherstrips-rope-ns": "Drying Rack Kapok Leatherstrips Rope (Ns)",
+	"block-drying-rack-birch-reeds-rope-ns": "Drying Rack Birch Reeds Rope (Ns)",
+	"block-drying-rack-oak-reeds-rope-ns": "Drying Rack Oak Reeds Rope (Ns)",
+	"block-drying-rack-maple-reeds-rope-ns": "Drying Rack Maple Reeds Rope (Ns)",
+	"block-drying-rack-pine-reeds-rope-ns": "Drying Rack Pine Reeds Rope (Ns)",
+	"block-drying-rack-acacia-reeds-rope-ns": "Drying Rack Acacia Reeds Rope (Ns)",
+	"block-drying-rack-kapok-reeds-rope-ns": "Drying Rack Kapok Reeds Rope (Ns)",
+	"block-drying-rack-birch-sinew-rope-ns": "Drying Rack Birch Sinew Rope (Ns)",
+	"block-drying-rack-oak-sinew-rope-ns": "Drying Rack Oak Sinew Rope (Ns)",
+	"block-drying-rack-maple-sinew-rope-ns": "Drying Rack Maple Sinew Rope (Ns)",
+	"block-drying-rack-pine-sinew-rope-ns": "Drying Rack Pine Sinew Rope (Ns)",
+	"block-drying-rack-acacia-sinew-rope-ns": "Drying Rack Acacia Sinew Rope (Ns)",
+	"block-drying-rack-kapok-sinew-rope-ns": "Drying Rack Kapok Sinew Rope (Ns)",
+	"block-drying-rack-birch-sisal-rope-ns": "Drying Rack Birch Sisal Rope (Ns)",
+	"block-drying-rack-oak-sisal-rope-ns": "Drying Rack Oak Sisal Rope (Ns)",
+	"block-drying-rack-maple-sisal-rope-ns": "Drying Rack Maple Sisal Rope (Ns)",
+	"block-drying-rack-pine-sisal-rope-ns": "Drying Rack Pine Sisal Rope (Ns)",
+	"block-drying-rack-acacia-sisal-rope-ns": "Drying Rack Acacia Sisal Rope (Ns)",
+	"block-drying-rack-kapok-sisal-rope-ns": "Drying Rack Kapok Sisal Rope (Ns)",
+	"block-drying-rack-birch-leatherstrips-salt-meat-ns": "Drying Rack Birch Leatherstrips Salt Meat (Ns)",
+	"block-drying-rack-oak-leatherstrips-salt-meat-ns": "Drying Rack Oak Leatherstrips Salt Meat (Ns)",
+	"block-drying-rack-maple-leatherstrips-salt-meat-ns": "Drying Rack Maple Leatherstrips Salt Meat (Ns)",
+	"block-drying-rack-pine-leatherstrips-salt-meat-ns": "Drying Rack Pine Leatherstrips Salt Meat (Ns)",
+	"block-drying-rack-acacia-leatherstrips-salt-meat-ns": "Drying Rack Acacia Leatherstrips Salt Meat (Ns)",
+	"block-drying-rack-kapok-leatherstrips-salt-meat-ns": "Drying Rack Kapok Leatherstrips Salt Meat (Ns)",
+	"block-drying-rack-birch-reeds-salt-meat-ns": "Drying Rack Birch Reeds Salt Meat (Ns)",
+	"block-drying-rack-oak-reeds-salt-meat-ns": "Drying Rack Oak Reeds Salt Meat (Ns)",
+	"block-drying-rack-maple-reeds-salt-meat-ns": "Drying Rack Maple Reeds Salt Meat (Ns)",
+	"block-drying-rack-pine-reeds-salt-meat-ns": "Drying Rack Pine Reeds Salt Meat (Ns)",
+	"block-drying-rack-acacia-reeds-salt-meat-ns": "Drying Rack Acacia Reeds Salt Meat (Ns)",
+	"block-drying-rack-kapok-reeds-salt-meat-ns": "Drying Rack Kapok Reeds Salt Meat (Ns)",
+	"block-drying-rack-birch-sinew-salt-meat-ns": "Drying Rack Birch Sinew Salt Meat (Ns)",
+	"block-drying-rack-oak-sinew-salt-meat-ns": "Drying Rack Oak Sinew Salt Meat (Ns)",
+	"block-drying-rack-maple-sinew-salt-meat-ns": "Drying Rack Maple Sinew Salt Meat (Ns)",
+	"block-drying-rack-pine-sinew-salt-meat-ns": "Drying Rack Pine Sinew Salt Meat (Ns)",
+	"block-drying-rack-acacia-sinew-salt-meat-ns": "Drying Rack Acacia Sinew Salt Meat (Ns)",
+	"block-drying-rack-kapok-sinew-salt-meat-ns": "Drying Rack Kapok Sinew Salt Meat (Ns)",
+	"block-drying-rack-birch-sisal-salt-meat-ns": "Drying Rack Birch Sisal Salt Meat (Ns)",
+	"block-drying-rack-oak-sisal-salt-meat-ns": "Drying Rack Oak Sisal Salt Meat (Ns)",
+	"block-drying-rack-maple-sisal-salt-meat-ns": "Drying Rack Maple Sisal Salt Meat (Ns)",
+	"block-drying-rack-pine-sisal-salt-meat-ns": "Drying Rack Pine Sisal Salt Meat (Ns)",
+	"block-drying-rack-acacia-sisal-salt-meat-ns": "Drying Rack Acacia Sisal Salt Meat (Ns)",
+	"block-drying-rack-kapok-sisal-salt-meat-ns": "Drying Rack Kapok Sisal Salt Meat (Ns)",
+	"block-drying-rack-birch-leatherstrips-dry-meat-ns": "Drying Rack Birch Leatherstrips Dry Meat (Ns)",
+	"block-drying-rack-oak-leatherstrips-dry-meat-ns": "Drying Rack Oak Leatherstrips Dry Meat (Ns)",
+	"block-drying-rack-maple-leatherstrips-dry-meat-ns": "Drying Rack Maple Leatherstrips Dry Meat (Ns)",
+	"block-drying-rack-pine-leatherstrips-dry-meat-ns": "Drying Rack Pine Leatherstrips Dry Meat (Ns)",
+	"block-drying-rack-acacia-leatherstrips-dry-meat-ns": "Drying Rack Acacia Leatherstrips Dry Meat (Ns)",
+	"block-drying-rack-kapok-leatherstrips-dry-meat-ns": "Drying Rack Kapok Leatherstrips Dry Meat (Ns)",
+	"block-drying-rack-birch-reeds-dry-meat-ns": "Drying Rack Birch Reeds Dry Meat (Ns)",
+	"block-drying-rack-oak-reeds-dry-meat-ns": "Drying Rack Oak Reeds Dry Meat (Ns)",
+	"block-drying-rack-maple-reeds-dry-meat-ns": "Drying Rack Maple Reeds Dry Meat (Ns)",
+	"block-drying-rack-pine-reeds-dry-meat-ns": "Drying Rack Pine Reeds Dry Meat (Ns)",
+	"block-drying-rack-acacia-reeds-dry-meat-ns": "Drying Rack Acacia Reeds Dry Meat (Ns)",
+	"block-drying-rack-kapok-reeds-dry-meat-ns": "Drying Rack Kapok Reeds Dry Meat (Ns)",
+	"block-drying-rack-birch-sinew-dry-meat-ns": "Drying Rack Birch Sinew Dry Meat (Ns)",
+	"block-drying-rack-oak-sinew-dry-meat-ns": "Drying Rack Oak Sinew Dry Meat (Ns)",
+	"block-drying-rack-maple-sinew-dry-meat-ns": "Drying Rack Maple Sinew Dry Meat (Ns)",
+	"block-drying-rack-pine-sinew-dry-meat-ns": "Drying Rack Pine Sinew Dry Meat (Ns)",
+	"block-drying-rack-acacia-sinew-dry-meat-ns": "Drying Rack Acacia Sinew Dry Meat (Ns)",
+	"block-drying-rack-kapok-sinew-dry-meat-ns": "Drying Rack Kapok Sinew Dry Meat (Ns)",
+	"block-drying-rack-birch-sisal-dry-meat-ns": "Drying Rack Birch Sisal Dry Meat (Ns)",
+	"block-drying-rack-oak-sisal-dry-meat-ns": "Drying Rack Oak Sisal Dry Meat (Ns)",
+	"block-drying-rack-maple-sisal-dry-meat-ns": "Drying Rack Maple Sisal Dry Meat (Ns)",
+	"block-drying-rack-pine-sisal-dry-meat-ns": "Drying Rack Pine Sisal Dry Meat (Ns)",
+	"block-drying-rack-acacia-sisal-dry-meat-ns": "Drying Rack Acacia Sisal Dry Meat (Ns)",
+	"block-drying-rack-kapok-sisal-dry-meat-ns": "Drying Rack Kapok Sisal Dry Meat (Ns)",
+	"block-dryingmat-fresh-small-blackcurrant-east": "Dryingmat Fresh Small Blackcurrant",
+	"block-dryingmat-dry-small-blackcurrant-east": "Dryingmat Dry Small Blackcurrant",
+	"block-dryingmat-fresh-medium-blackcurrant-east": "Dryingmat Fresh Medium Blackcurrant",
+	"block-dryingmat-dry-medium-blackcurrant-east": "Dryingmat Dry Medium Blackcurrant",
+	"block-dryingmat-fresh-large-blackcurrant-east": "Dryingmat Fresh Large Blackcurrant",
+	"block-dryingmat-dry-large-blackcurrant-east": "Dryingmat Dry Large Blackcurrant",
+	"block-dryingmat-fresh-small-blueberry-east": "Dryingmat Fresh Small Blueberry",
+	"block-dryingmat-dry-small-blueberry-east": "Dryingmat Dry Small Blueberry",
+	"block-dryingmat-fresh-medium-blueberry-east": "Dryingmat Fresh Medium Blueberry",
+	"block-dryingmat-dry-medium-blueberry-east": "Dryingmat Dry Medium Blueberry",
+	"block-dryingmat-fresh-large-blueberry-east": "Dryingmat Fresh Large Blueberry",
+	"block-dryingmat-dry-large-blueberry-east": "Dryingmat Dry Large Blueberry",
+	"block-dryingmat-fresh-small-cranberry-east": "Dryingmat Fresh Small Cranberry",
+	"block-dryingmat-dry-small-cranberry-east": "Dryingmat Dry Small Cranberry",
+	"block-dryingmat-fresh-medium-cranberry-east": "Dryingmat Fresh Medium Cranberry",
+	"block-dryingmat-dry-medium-cranberry-east": "Dryingmat Dry Medium Cranberry",
+	"block-dryingmat-fresh-large-cranberry-east": "Dryingmat Fresh Large Cranberry",
+	"block-dryingmat-dry-large-cranberry-east": "Dryingmat Dry Large Cranberry",
+	"block-dryingmat-fresh-small-redcurrant-east": "Dryingmat Fresh Small Redcurrant",
+	"block-dryingmat-dry-small-redcurrant-east": "Dryingmat Dry Small Redcurrant",
+	"block-dryingmat-fresh-medium-redcurrant-east": "Dryingmat Fresh Medium Redcurrant",
+	"block-dryingmat-dry-medium-redcurrant-east": "Dryingmat Dry Medium Redcurrant",
+	"block-dryingmat-fresh-large-redcurrant-east": "Dryingmat Fresh Large Redcurrant",
+	"block-dryingmat-dry-large-redcurrant-east": "Dryingmat Dry Large Redcurrant",
+	"block-dryingmat-fresh-small-saguaro-east": "Dryingmat Fresh Small Saguaro",
+	"block-dryingmat-dry-small-saguaro-east": "Dryingmat Dry Small Saguaro",
+	"block-dryingmat-fresh-medium-saguaro-east": "Dryingmat Fresh Medium Saguaro",
+	"block-dryingmat-dry-medium-saguaro-east": "Dryingmat Dry Medium Saguaro",
+	"block-dryingmat-fresh-large-saguaro-east": "Dryingmat Fresh Large Saguaro",
+	"block-dryingmat-dry-large-saguaro-east": "Dryingmat Dry Large Saguaro",
+	"block-dryingmat-fresh-small-whitecurrant-east": "Dryingmat Fresh Small Whitecurrant",
+	"block-dryingmat-dry-small-whitecurrant-east": "Dryingmat Dry Small Whitecurrant",
+	"block-dryingmat-fresh-medium-whitecurrant-east": "Dryingmat Fresh Medium Whitecurrant",
+	"block-dryingmat-dry-medium-whitecurrant-east": "Dryingmat Dry Medium Whitecurrant",
+	"block-dryingmat-fresh-large-whitecurrant-east": "Dryingmat Fresh Large Whitecurrant",
+	"block-dryingmat-dry-large-whitecurrant-east": "Dryingmat Dry Large Whitecurrant",
+	
+	"item-pemmican-sausage": "Pemmican (Sausage)",
+	"item-animal-intestines": "Animal (Intestines)",
+	"item-animal-cleanintestines": "Animal (Cleanintestines)",
+	"item-animal-casings": "Animal (Casings)",
+
+  
   "block-chestframe-bamboo-green-*": "Green Bamboo Chest Frame",
   "block-chestframe-bamboo-brown-*": "Brown Bamboo Chest Frame",
   "block-chestframe-acacia-*": "Acacia Chest Frame",
