--- a/bin/Immersion/assets/game/lang/en.json
+++ b/bin/Immersion/assets/game/lang/en.json
@@ -19,6 +19,9 @@
   "craftinginfo-preserving-title": "Immersion Food Preserving",
   "craftinginfo-preserving-text": "<strong>preserving</strong><br><br>Immersion Food Preserving 101. Only here on The Immersion Mod.<br><br>To make dry fruits place a  sisal rug on the ground and sneak right click with enough fruits, after some time under the sun they will dry. To make dry meat, first sneak right click raw meat over a Food Bowl , then add salt, remove it by holding right click. Place salted meat on a Drying Rack, after some time under the sun you will be able to harvest Dry Meat. To make Pemmican, first place intestines on a large Food Bowl and sneak right click with a knife to make casings. Harvest casings. next step is to grind the dry meat and the dry fruit in a Quern or Mortar and Pestle. Add the dry meat flour first to a food bowl, then add, dry fruit flour, fat and lastly sneak right click wqith enough honey bowls. Once the Pemmican mixture is done, just sneak right click with casings to make Pemmican Sausages<br><br>Congratulations! You are now a master Food Preserver \\o/<br>",
   
+  "item-ingot-rawironbloom": "Ingot (Raw Iron bloom)",
+  "item-ingot-refinedironbloom": "Ingot (Refined Iron Bloom)",
+  
   "block-bonfire-extinct": "Bonfire (Extinct)" ,
   "block-bonfire-lit": "Bonfire (Lit)" ,
   
