--- a/bin/Immersion/assets/immersion/lang/en.json
+++ b/bin/Immersion/assets/immersion/lang/en.json
@@ -10,7 +10,103 @@
   "Place a Barked Very Thin Branch horizontally , shift right click with any cordage, then shift right click again with 3 more Barked Very Thin Branches.":"Place a Barked Very Thin Branch horizontally , shift right click with any cordage, then shift right click again with 3 more Barked Very Thin Branches.",
   "Place a Debarked Very Thin Branch vertically on the ground, shift right click with any cordage, next shift right click again with Debarked Very Thin Branch to make the scafolding.":"Place a Debarked Very Thin Branch vertically on the ground, shift right click with any cordage, next shift right click again with Debarked Very Thin Branch to make the scafolding.",
   
-  	
+  	"block-drying-rack-birch-leatherstrips-salt-pork-ns": "Drying Rack Birch Leatherstrips Salt Pork (Ns)",
+	"block-drying-rack-oak-leatherstrips-salt-pork-ns": "Drying Rack Oak Leatherstrips Salt Pork (Ns)",
+	"block-drying-rack-maple-leatherstrips-salt-pork-ns": "Drying Rack Maple Leatherstrips Salt Pork (Ns)",
+	"block-drying-rack-pine-leatherstrips-salt-pork-ns": "Drying Rack Pine Leatherstrips Salt Pork (Ns)",
+	"block-drying-rack-acacia-leatherstrips-salt-pork-ns": "Drying Rack Acacia Leatherstrips Salt Pork (Ns)",
+	"block-drying-rack-kapok-leatherstrips-salt-pork-ns": "Drying Rack Kapok Leatherstrips Salt Pork (Ns)",
+	"block-drying-rack-birch-reeds-salt-pork-ns": "Drying Rack Birch Reeds Salt Pork (Ns)",
+	"block-drying-rack-oak-reeds-salt-pork-ns": "Drying Rack Oak Reeds Salt Pork (Ns)",
+	"block-drying-rack-maple-reeds-salt-pork-ns": "Drying Rack Maple Reeds Salt Pork (Ns)",
+	"block-drying-rack-pine-reeds-salt-pork-ns": "Drying Rack Pine Reeds Salt Pork (Ns)",
+	"block-drying-rack-acacia-reeds-salt-pork-ns": "Drying Rack Acacia Reeds Salt Pork (Ns)",
+	"block-drying-rack-kapok-reeds-salt-pork-ns": "Drying Rack Kapok Reeds Salt Pork (Ns)",
+	"block-drying-rack-birch-sinew-salt-pork-ns": "Drying Rack Birch Sinew Salt Pork (Ns)",
+	"block-drying-rack-oak-sinew-salt-pork-ns": "Drying Rack Oak Sinew Salt Pork (Ns)",
+	"block-drying-rack-maple-sinew-salt-pork-ns": "Drying Rack Maple Sinew Salt Pork (Ns)",
+	"block-drying-rack-pine-sinew-salt-pork-ns": "Drying Rack Pine Sinew Salt Pork (Ns)",
+	"block-drying-rack-acacia-sinew-salt-pork-ns": "Drying Rack Acacia Sinew Salt Pork (Ns)",
+	"block-drying-rack-kapok-sinew-salt-pork-ns": "Drying Rack Kapok Sinew Salt Pork (Ns)",
+	"block-drying-rack-birch-sisal-salt-pork-ns": "Drying Rack Birch Sisal Salt Pork (Ns)",
+	"block-drying-rack-oak-sisal-salt-pork-ns": "Drying Rack Oak Sisal Salt Pork (Ns)",
+	"block-drying-rack-maple-sisal-salt-pork-ns": "Drying Rack Maple Sisal Salt Pork (Ns)",
+	"block-drying-rack-pine-sisal-salt-pork-ns": "Drying Rack Pine Sisal Salt Pork (Ns)",
+	"block-drying-rack-acacia-sisal-salt-pork-ns": "Drying Rack Acacia Sisal Salt Pork (Ns)",
+	"block-drying-rack-kapok-sisal-salt-pork-ns": "Drying Rack Kapok Sisal Salt Pork (Ns)",
+	"block-drying-rack-birch-leatherstrips-dry-pork-ns": "Drying Rack Birch Leatherstrips Dry Pork (Ns)",
+	"block-drying-rack-oak-leatherstrips-dry-pork-ns": "Drying Rack Oak Leatherstrips Dry Pork (Ns)",
+	"block-drying-rack-maple-leatherstrips-dry-pork-ns": "Drying Rack Maple Leatherstrips Dry Pork (Ns)",
+	"block-drying-rack-pine-leatherstrips-dry-pork-ns": "Drying Rack Pine Leatherstrips Dry Pork (Ns)",
+	"block-drying-rack-acacia-leatherstrips-dry-pork-ns": "Drying Rack Acacia Leatherstrips Dry Pork (Ns)",
+	"block-drying-rack-kapok-leatherstrips-dry-pork-ns": "Drying Rack Kapok Leatherstrips Dry Pork (Ns)",
+	"block-drying-rack-birch-reeds-dry-pork-ns": "Drying Rack Birch Reeds Dry Pork (Ns)",
+	"block-drying-rack-oak-reeds-dry-pork-ns": "Drying Rack Oak Reeds Dry Pork (Ns)",
+	"block-drying-rack-maple-reeds-dry-pork-ns": "Drying Rack Maple Reeds Dry Pork (Ns)",
+	"block-drying-rack-pine-reeds-dry-pork-ns": "Drying Rack Pine Reeds Dry Pork (Ns)",
+	"block-drying-rack-acacia-reeds-dry-pork-ns": "Drying Rack Acacia Reeds Dry Pork (Ns)",
+	"block-drying-rack-kapok-reeds-dry-pork-ns": "Drying Rack Kapok Reeds Dry Pork (Ns)",
+	"block-drying-rack-birch-sinew-dry-pork-ns": "Drying Rack Birch Sinew Dry Pork (Ns)",
+	"block-drying-rack-oak-sinew-dry-pork-ns": "Drying Rack Oak Sinew Dry Pork (Ns)",
+	"block-drying-rack-maple-sinew-dry-pork-ns": "Drying Rack Maple Sinew Dry Pork (Ns)",
+	"block-drying-rack-pine-sinew-dry-pork-ns": "Drying Rack Pine Sinew Dry Pork (Ns)",
+	"block-drying-rack-acacia-sinew-dry-pork-ns": "Drying Rack Acacia Sinew Dry Pork (Ns)",
+	"block-drying-rack-kapok-sinew-dry-pork-ns": "Drying Rack Kapok Sinew Dry Pork (Ns)",
+	"block-drying-rack-birch-sisal-dry-pork-ns": "Drying Rack Birch Sisal Dry Pork (Ns)",
+	"block-drying-rack-oak-sisal-dry-pork-ns": "Drying Rack Oak Sisal Dry Pork (Ns)",
+	"block-drying-rack-maple-sisal-dry-pork-ns": "Drying Rack Maple Sisal Dry Pork (Ns)",
+	"block-drying-rack-pine-sisal-dry-pork-ns": "Drying Rack Pine Sisal Dry Pork (Ns)",
+	"block-drying-rack-acacia-sisal-dry-pork-ns": "Drying Rack Acacia Sisal Dry Pork (Ns)",
+	"block-drying-rack-kapok-sisal-dry-pork-ns": "Drying Rack Kapok Sisal Dry Pork (Ns)",
+	"block-drying-rack-birch-leatherstrips-salt-mutton-ns": "Drying Rack Birch Leatherstrips Salt Mutton (Ns)",
+	"block-drying-rack-oak-leatherstrips-salt-mutton-ns": "Drying Rack Oak Leatherstrips Salt Mutton (Ns)",
+	"block-drying-rack-maple-leatherstrips-salt-mutton-ns": "Drying Rack Maple Leatherstrips Salt Mutton (Ns)",
+	"block-drying-rack-pine-leatherstrips-salt-mutton-ns": "Drying Rack Pine Leatherstrips Salt Mutton (Ns)",
+	"block-drying-rack-acacia-leatherstrips-salt-mutton-ns": "Drying Rack Acacia Leatherstrips Salt Mutton (Ns)",
+	"block-drying-rack-kapok-leatherstrips-salt-mutton-ns": "Drying Rack Kapok Leatherstrips Salt Mutton (Ns)",
+	"block-drying-rack-birch-reeds-salt-mutton-ns": "Drying Rack Birch Reeds Salt Mutton (Ns)",
+	"block-drying-rack-oak-reeds-salt-mutton-ns": "Drying Rack Oak Reeds Salt Mutton (Ns)",
+	"block-drying-rack-maple-reeds-salt-mutton-ns": "Drying Rack Maple Reeds Salt Mutton (Ns)",
+	"block-drying-rack-pine-reeds-salt-mutton-ns": "Drying Rack Pine Reeds Salt Mutton (Ns)",
+	"block-drying-rack-acacia-reeds-salt-mutton-ns": "Drying Rack Acacia Reeds Salt Mutton (Ns)",
+	"block-drying-rack-kapok-reeds-salt-mutton-ns": "Drying Rack Kapok Reeds Salt Mutton (Ns)",
+	"block-drying-rack-birch-sinew-salt-mutton-ns": "Drying Rack Birch Sinew Salt Mutton (Ns)",
+	"block-drying-rack-oak-sinew-salt-mutton-ns": "Drying Rack Oak Sinew Salt Mutton (Ns)",
+	"block-drying-rack-maple-sinew-salt-mutton-ns": "Drying Rack Maple Sinew Salt Mutton (Ns)",
+	"block-drying-rack-pine-sinew-salt-mutton-ns": "Drying Rack Pine Sinew Salt Mutton (Ns)",
+	"block-drying-rack-acacia-sinew-salt-mutton-ns": "Drying Rack Acacia Sinew Salt Mutton (Ns)",
+	"block-drying-rack-kapok-sinew-salt-mutton-ns": "Drying Rack Kapok Sinew Salt Mutton (Ns)",
+	"block-drying-rack-birch-sisal-salt-mutton-ns": "Drying Rack Birch Sisal Salt Mutton (Ns)",
+	"block-drying-rack-oak-sisal-salt-mutton-ns": "Drying Rack Oak Sisal Salt Mutton (Ns)",
+	"block-drying-rack-maple-sisal-salt-mutton-ns": "Drying Rack Maple Sisal Salt Mutton (Ns)",
+	"block-drying-rack-pine-sisal-salt-mutton-ns": "Drying Rack Pine Sisal Salt Mutton (Ns)",
+	"block-drying-rack-acacia-sisal-salt-mutton-ns": "Drying Rack Acacia Sisal Salt Mutton (Ns)",
+	"block-drying-rack-kapok-sisal-salt-mutton-ns": "Drying Rack Kapok Sisal Salt Mutton (Ns)",
+	"block-drying-rack-birch-leatherstrips-dry-mutton-ns": "Drying Rack Birch Leatherstrips Dry Mutton (Ns)",
+	"block-drying-rack-oak-leatherstrips-dry-mutton-ns": "Drying Rack Oak Leatherstrips Dry Mutton (Ns)",
+	"block-drying-rack-maple-leatherstrips-dry-mutton-ns": "Drying Rack Maple Leatherstrips Dry Mutton (Ns)",
+	"block-drying-rack-pine-leatherstrips-dry-mutton-ns": "Drying Rack Pine Leatherstrips Dry Mutton (Ns)",
+	"block-drying-rack-acacia-leatherstrips-dry-mutton-ns": "Drying Rack Acacia Leatherstrips Dry Mutton (Ns)",
+	"block-drying-rack-kapok-leatherstrips-dry-mutton-ns": "Drying Rack Kapok Leatherstrips Dry Mutton (Ns)",
+	"block-drying-rack-birch-reeds-dry-mutton-ns": "Drying Rack Birch Reeds Dry Mutton (Ns)",
+	"block-drying-rack-oak-reeds-dry-mutton-ns": "Drying Rack Oak Reeds Dry Mutton (Ns)",
+	"block-drying-rack-maple-reeds-dry-mutton-ns": "Drying Rack Maple Reeds Dry Mutton (Ns)",
+	"block-drying-rack-pine-reeds-dry-mutton-ns": "Drying Rack Pine Reeds Dry Mutton (Ns)",
+	"block-drying-rack-acacia-reeds-dry-mutton-ns": "Drying Rack Acacia Reeds Dry Mutton (Ns)",
+	"block-drying-rack-kapok-reeds-dry-mutton-ns": "Drying Rack Kapok Reeds Dry Mutton (Ns)",
+	"block-drying-rack-birch-sinew-dry-mutton-ns": "Drying Rack Birch Sinew Dry Mutton (Ns)",
+	"block-drying-rack-oak-sinew-dry-mutton-ns": "Drying Rack Oak Sinew Dry Mutton (Ns)",
+	"block-drying-rack-maple-sinew-dry-mutton-ns": "Drying Rack Maple Sinew Dry Mutton (Ns)",
+	"block-drying-rack-pine-sinew-dry-mutton-ns": "Drying Rack Pine Sinew Dry Mutton (Ns)",
+	"block-drying-rack-acacia-sinew-dry-mutton-ns": "Drying Rack Acacia Sinew Dry Mutton (Ns)",
+	"block-drying-rack-kapok-sinew-dry-mutton-ns": "Drying Rack Kapok Sinew Dry Mutton (Ns)",
+	"block-drying-rack-birch-sisal-dry-mutton-ns": "Drying Rack Birch Sisal Dry Mutton (Ns)",
+	"block-drying-rack-oak-sisal-dry-mutton-ns": "Drying Rack Oak Sisal Dry Mutton (Ns)",
+	"block-drying-rack-maple-sisal-dry-mutton-ns": "Drying Rack Maple Sisal Dry Mutton (Ns)",
+	"block-drying-rack-pine-sisal-dry-mutton-ns": "Drying Rack Pine Sisal Dry Mutton (Ns)",
+	"block-drying-rack-acacia-sisal-dry-mutton-ns": "Drying Rack Acacia Sisal Dry Mutton (Ns)",
+	"block-drying-rack-kapok-sisal-dry-mutton-ns": "Drying Rack Kapok Sisal Dry Mutton (Ns)",
+	
 	"block-drying-rack-birch-leatherstrips-rope-ns": "Drying Rack Birch Leatherstrips Rope (Ns)",
 	"block-drying-rack-oak-leatherstrips-rope-ns": "Drying Rack Oak Leatherstrips Rope (Ns)",
 	"block-drying-rack-maple-leatherstrips-rope-ns": "Drying Rack Maple Leatherstrips Rope (Ns)",
@@ -1246,10 +1342,14 @@
   "item-porkchops-cooked": "Cooked Pork Chops",
   "item-porkchops-raw": "Raw Pork Chops",
   "item-porkchops-cured": "Cured Pork Chops",
+  "item-porkchops-salted": "Porkchops (Salted)",
+  "item-porkchops-dry": "Porkchops (Dry)",
 
   "item-mutton-cooked": "Cooked Mutton",
   "item-mutton-raw": "Raw Mutton",
   "item-mutton-cured": "Cured Mutton",
+  "item-mutton-salted": "Mutton (Salted)",
+  "item-mutton-dry": "Mutton (Dry)",
 
   "item-chicken-raw": "Raw Chicken",
   "item-chicken-cooked": "Cooked Chicken",
