Fixed multiplechests on Inventory GUI.

--- a/bin/Immersion/assets/game/lang/en.json
+++ b/bin/Immersion/assets/game/lang/en.json
@@ -19,6 +19,25 @@
   "craftinginfo-preserving-title": "Immersion Food Preserving",
   "craftinginfo-preserving-text": "<strong>preserving</strong><br><br>Immersion Food Preserving 101. Only here on The Immersion Mod.<br><br>To make dry fruits place a  sisal rug on the ground and sneak right click with enough fruits, after some time under the sun they will dry. To make dry meat, first sneak right click raw meat over a Food Bowl , then add salt, remove it by holding right click. Place salted meat on a Drying Rack, after some time under the sun you will be able to harvest Dry Meat. To make Pemmican, first place intestines on a large Food Bowl and sneak right click with a knife to make casings. Harvest casings. next step is to grind the dry meat and the dry fruit in a Quern or Mortar and Pestle. Add the dry meat flour first to a food bowl, then add, dry fruit flour, fat and lastly sneak right click wqith enough honey bowls. Once the Pemmican mixture is done, just sneak right click with casings to make Pemmican Sausages<br><br>Congratulations! You are now a master Food Preserver \\o/<br>",
   
+  "block-barrel-aged": "Barrel (Aged)",
+  "block-barrel-bamboo-brown": "Barrel Bamboo (Brown)",
+  "block-barrel-bamboo-green": "Barrel Bamboo (Green)",
+  "block-barrel-birch": "Barrel (Birch)",
+  "block-barrel-oak": "Barrel (Oak)",
+  "block-barrel-maple": "Barrel (Maple)",
+  "block-barrel-pine": "Barrel (Pine)",
+  "block-barrel-acacia": "Barrel (Acacia)",
+  "block-barrel-kapok": "Barrel (Kapok)",
+  "block-woodbucket-aged": "Woodbucket (Aged)",
+  "block-woodbucket-bamboo-green": "Woodbucket Bamboo (Green)",
+  "block-woodbucket-bamboo-brown": "Woodbucket Bamboo (Brown)",
+  "block-woodbucket-birch": "Woodbucket (Birch)",
+  "block-woodbucket-oak": "Woodbucket (Oak)",
+  "block-woodbucket-maple": "Woodbucket (Maple)",
+  "block-woodbucket-pine": "Woodbucket (Pine)",
+  "block-woodbucket-acacia": "Woodbucket (Acacia)",
+  "block-woodbucket-kapok": "Woodbucket (Kapok)",
+  
   "item-ingot-rawironbloom": "Ingot (Raw Iron bloom)",
   "item-ingot-refinedironbloom": "Ingot (Refined Iron Bloom)",
   
@@ -4494,24 +4513,24 @@
 	"block-slab-branch-peridotite-kapok-debarked": "Slab Branch Peridotite Kapok (Debarked)",
 	"block-dryingtray-aged": "Dryingtray (Aged)",
 	
-	"block-normal-survivalchest-acacia-*": "Immersion Acacia Chest",
-	"block-normal-survivalchest-aged-*": "Immersion Aged Chest",
-	"block-normal-survivalchest-birch-*": "Immersion Birch Chest",
-	"block-normal-survivalchest-kapok-*": "Immersion Kapok Chest",
-	"block-normal-survivalchest-maple-*": "Immersion Maple Chest",
-	"block-normal-survivalchest-oak-*": "Immersion Oak Chest",
-	"block-normal-survivalchest-pine-*": "Immersion Pine Chest",
-	"block-normal-survivalchest-bamboo-green-*": "Immersion Green Bamboo Chest",
-	"block-normal-survivalchest-bamboo-brown-*": "Immersion Brown Bamboo Chest",
+	"block-normal-acacia-survivalchest-*": "Immersion Acacia Chest",
+	"block-normal-aged-survivalchest-*": "Immersion Aged Chest",
+	"block-normal-birch-survivalchest-*": "Immersion Birch Chest",
+	"block-normal-kapok-survivalchest-*": "Immersion Kapok Chest",
+	"block-normal-maple-survivalchest-*": "Immersion Maple Chest",
+	"block-normal-oak-survivalchest-*": "Immersion Oak Chest",
+	"block-normal-pine-survivalchest-*": "Immersion Pine Chest",
+	"block-normal-bamboo-green-survivalchest-*": "Immersion Green Bamboo Chest",
+	"block-normal-bamboo-brown-survivalchest-*": "Immersion Brown Bamboo Chest",
 	
-	"block-normal-survivallabeledchest-acacia-*": "Immersion Acacia Labeled chest",
-	"block-normal-survivallabeledchest-aged-*": "Immersion Aged Labeled chest",
-	"block-normal-survivallabeledchest-birch-*": "Immersion Birch Labeled chest",
-	"block-normal-survivallabeledchest-kapok-*": "Immersion Kapok Labeled chest",
-	"block-normal-survivallabeledchest-maple-*": "Immersion Maple Labeled chest",
-	"block-normal-survivallabeledchest-oak-*": "Immersion Oak Labeled chest",
-	"block-normal-survivallabeledchest-pine-*": "Immersion Pine Labeled chest",
-	"block-normal-survivallabeledchest-bamboo-green-*": "Immersion Green Bamboo Labeled chest",
-	"block-normal-survivallabeledchest-bamboo-brown-*": "Immersion Brown Bamboo Labeled chest",
+	"block-normal-acacia-survivallabeledchest-*": "Immersion Acacia Labeled chest",
+	"block-normal-aged-survivallabeledchest-*": "Immersion Aged Labeled chest",
+	"block-normal-birch-survivallabeledchest-*": "Immersion Birch Labeled chest",
+	"block-normal-kapok-survivallabeledchest-*": "Immersion Kapok Labeled chest",
+	"block-normal-maple-survivallabeledchest-*": "Immersion Maple Labeled chest",
+	"block-normal-oak-survivallabeledchest-*": "Immersion Oak Labeled chest",
+	"block-normal-pine-survivallabeledchest-*": "Immersion Pine Labeled chest",
+	"block-normal-bamboo-green-survivallabeledchest-*": "Immersion Green Bamboo Labeled chest",
+	"block-normal-bamboo-brown-survivallabeledchest-*": "Immersion Brown Bamboo Labeled chest",
 	
 }
